<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/section_creator_class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="Test name for now"
        android:textColor="#000000"
        android:textSize="24sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/class_days"
        android:textColor="#000000"
        android:textSize="18dp" />

    <!--contains all the check boxes for the days and their labels-->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:columnCount="7"
        android:paddingBottom="25dp"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/monday_label"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/tuesday_label"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/wednesday_label"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/thursday_label"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/friday_label"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/saturday_label"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/sunday_label"
            android:textColor="#000000"
            android:textSize="12dp" />


        <!--all the date checkboxes-->
        <CheckBox
            android:id="@+id/monday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/tuesday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/wednesday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/thursday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/friday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/saturday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/sunday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />


    </GridLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/start_time_section_creator"
        android:textColor="#000000"
        android:textSize="18dp" />

    <!--Holds the spinners for the Time-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TimePicker>
            </LinearLayout>-->

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/end_time_section_creator"
        android:textColor="#000000"
        android:textSize="18dp" />

    <!--Holds the spinners for the Time-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TimePicker>
            </LinearLayout>-->

    </LinearLayout>
    <!--The section-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/section_section_creator"
        android:textColor="#000000"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/section_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="4" />


    <!--Optional Comments-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/comments_section_creator"
        android:textColor="#000000"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/section_creator_comments_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createSingleSection"
        android:text="@string/create_section_button" />
</LinearLayout>